--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
 }
 </script>
 </head>
+
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9774042341049510"
+     crossorigin="anonymous"></script>
+  
   <body>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
